1. Enhanced login and signup with Imperva captcha protection.
2. Rectified ad creation bug.