@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -296,7 +296,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -389,7 +389,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -482,7 +482,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -575,7 +575,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -668,7 +668,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -761,7 +761,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -854,7 +854,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -937,7 +937,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1030,7 +1030,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1123,7 +1123,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1216,7 +1216,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1309,7 +1309,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1402,7 +1402,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1495,7 +1495,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1588,7 +1588,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1681,7 +1681,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1774,7 +1774,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1857,7 +1857,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
@@ -1940,7 +1940,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Enhanced login and signup with Imperva captcha protection.<br />2. Rectified ad creation bug.<br />
+              1. Improved country search - now ordered by name with search functionality by name or code.<br />2. Fix: Resolved pagination issue on the trusted users screen.<br />3. Fix: Addressed the 'read all notifications' bug.<br />
           </div>
         
 
